# domashkapro-backend

./: .env  README.md  alembic.ini  db.sqlite  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 2dde40f50188_create_users_table.py  35a66b4e1bba_create_users_table.py  455ea317c99d_add_items_table.py  c7807e1ca51d_create_users_table.py
app/: database.py  db.py  main.py  models.py  openai_client.py  prompt_builder.py  schemas.py  vision_client.py
app/core/: ai_provider.py  auth.py  config.py
app/services/: file_manager.py  users.py
tests/: conftest.py  test_api.py
